fixed extra padding on md toolbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,6 +78,7 @@ body {
 
     .w-md-editor-show-edit .w-md-editor-toolbar {
         margin: 0 49px;
+        padding: 0px;
     }
 
     .wmde-markdown.wmde-markdown-color {
@@ -93,6 +94,7 @@ body {
 
     .w-md-editor-show-edit .w-md-editor-toolbar {
         margin: 0 100px;
+        padding: 0px;
     }
 
     .wmde-markdown.wmde-markdown-color {
@@ -108,6 +110,7 @@ body {
 
     .w-md-editor-show-edit .w-md-editor-toolbar {
         margin: 0 150px;
+        padding: 0px;
     }
 
     .wmde-markdown.wmde-markdown-color {
@@ -123,6 +126,7 @@ body {
 
     .w-md-editor-show-edit .w-md-editor-toolbar {
         margin: 0 170px;
+        padding: 0px;
     }
 
     .wmde-markdown.wmde-markdown-color {
